# university

./: .gitmodules  README.md
1_term/dm/01/: A.cpp  B.cpp  B.pas  C.cpp  D.cpp
1_term/dm/03/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
1_term/dm/04/: A.cpp  B.hs  C.cpp  D.cpp  E.cpp
2_term/dm/01/: .gitignore  A.d  B.d  C.d  D.d  E.d  F.d  G.d  H.d
2_term/dm/02/: A.cpp  A.d  B.cpp  B.d  C.cpp  C.d  D.d  E.cpp  E.d  F.cpp  G.cpp  Glinked.cpp  H.cpp  qqq
2_term/dm/03/: A.hs  B.cpp  C.cpp
2_term/dm/04/: A.cpp  B.cpp  C.cpp  D.cpp
2_term/dm/05/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
2_term/dm/06/: A.cpp  B.cpp  C.cpp  D.cpp
2_term/languages/: .gitignore
2_term/languages/bigint/: .size_t_arithm.cpp  CMakeLists.txt  big_integer.cpp  big_integer.h  digit_array.cpp  digit_array.h  main.cpp  size_t_arithm.cpp
2_term/languages/bigint/gtest/: gtest-all.cc  gtest.h
2_term/languages/helloasm/: CMakeLists.txt  mul.asm  sub.asm
2_term/languages/list/: list.cpp  list.h  main.cpp
2_term/languages/misc/: abstract.cpp  exception.cpp  leak.cpp
2_term/paradigms/: .gitignore
2_term/paradigms/java/: README.md
3_term/differential_equations/euler/: euler.cpp  euler.dots  euler.gnuplot  euler10.dots
3_term/differential_equations/runge kutta/: dots  main.cpp  main.gnuplot
3_term/dm/01/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
3_term/dm/02/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
3_term/dm/03/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
3_term/dm/04/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  Eq.cpp  F.cpp
3_term/dm/05/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
3_term/dm/06/: A.cpp  B.cpp  C.cpp  D.cpp
3_term/dm/other/: floyd.cpp  hw
3_term/languages/: README.md
3_term/languages/cpp-network/: .gitignore  CMakeLists.txt
3_term/languages/cpp-network/apps/: proxy.cpp
3_term/languages/cpp-network/apps/echo/: echo_epoll.cpp  echo_single.cpp  main.cpp
3_term/languages/cpp-network/apps/misc/: request_printer.cpp
3_term/languages/cpp-network/apps/proxy/: main.cpp  proxy.cpp  request_printer.cpp
3_term/languages/cpp-network/apps/proxy/testing/: ip_echo.cpp  request_printer.cpp
3_term/languages/cpp-network/network/: epoll.cpp  epoll.h  epoll_utils.cpp  epoll_utils.h  event_descriptor.cpp  event_descriptor.h  eventfd.cpp  eventfd.h  file_descriptor.cpp  file_descriptor.h  network.h  network_exception.cpp  network_exception.h  socket.cpp  socket.h  timer_descriptor.cpp  timer_descriptor.h
3_term/languages/cpp-network/network/http/: http.h  request.cpp  request.h  request_parser.cpp  request_parser.h  resolver.cpp  resolver.h
3_term/languages/cpp-network/network/utils/: string_buffer.cpp  string_buffer.h  string_view.cpp  string_view.h
3_term/languages/cpp-network/utils/: executor.cpp  executor.h  log.cpp  log.h  string_buffer.cpp  string_buffer.h  string_view.cpp  string_view.h
3_term/languages/optional/: README.md  main.cpp  optional.h
3_term/logic/: .gitignore  Makefile  README.md  rec_functions.hs
3_term/logic/Predicate/: AplusB.hs  Base.hs  CopyPaste.hs  Logic.hs  Main.hs  Predicate.hs  Types.hs
3_term/logic/Statement/: Annotate.hs  Deduction.hs  Logic.hs  Proofs.hs  Proove.hs  Types.hs
4_term/dm/: main.gs
4_term/dm/01/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
4_term/dm/02/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
4_term/dm/03/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp  J.cpp  L.cpp  M.cpp  N.cpp  O.cpp
4_term/geom/: C.cpp  D.cpp  E.cpp  Eslow.hs  F.cpp  G.cpp  Gwrong.cpp  I.cpp  J.cpp  K.cpp  L.cpp
4_term/geom/A/: main.cpp  tests.h
4_term/geom/B/: Makefile  main.cpp  tests.h
4_term/geom/test/: gen.py  test.sh
4_term/java/: .gitignore  README.md  disable_ht.sh
4_term/java/doc/: gen.sh
4_term/java/homework1/: .gitignore
4_term/java/homework4/: .gitignore  gen.sh
4_term/java/homework5/: gen.sh
4_term/java/homeworkA/: runClient.sh  runRmi.sh  runServer.sh
4_term/java/test/: 1.sh  2.sh  3.sh  4.sh  6.sh  7.sh  8.sh  9client.sh  9server.sh
4_term/types/hw/: Church.hs  Combinators.hs  Expression.hs  README.md  Reduction.hs  TypeInference.hs  Types.hs  types.cabal
4_term/types/hw/app/: Compress.hs  HMInferType.hs  MainInferType.hs  MainNormalize.hs  Normalize.hs
4_term/types/hw/src/: Church.hs  Combinators.hs  Expression.hs  MainNormalize.hs  Reduction.hs  TypeInference.hs
4_term/types/hw/src/HM/: Expression.hs  TypeInference.hs
4_term/types/hw/src/Simple/: Church.hs  Combinators.hs  Expression.hs  Reduction.hs  TypeInference.hs
4_term/types/idris/: .gitignore  README.md  Setoid.idr  int.idr
5_term/formal/01/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
5_term/formal/02/: A.cpp  B.cpp  C.cpp  D.cpp
5_term/formal/03/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  test.sh
5_term/formal/04/: .gitignore  .vimrc  Makefile  convertto2.out  factorial.hs  infixlogic.out  preprocessor.hs  reverse.out  sorting.mt  zero.out
5_term/formal/lecture/: Quine.hs  show.hs
5_term/formal/spreadsheet-tool/: .gitignore  build.gradle  settings.gradle
5_term/geom/: .gitignore  Makefile  TODO  check  main.cpp
5_term/geom/off/: colored.off  colored2.off  example.off  (+5 more)
5_term/geom/project/: .gitignore  CMakeLists.txt  geometry.h  main.cpp  test.cpp
6_term/distr/: LICENSE  README.md  distr.cabal  process.cfg  run_process.sh  stack.yaml
6_term/distr/app/: Main.hs
6_term/distr/src/: Lib.hs  Server.hs  Types.hs
6_term/translation/: README.md
6_term/translation/depressed/: depressed.cabal  stylish-haskell.yaml
6_term/translation/depressed/app/: Main.hs
6_term/translation/depressed/src/: Common.hs  Grammar.hs  Input.hs  InputParser.hs  LL1Printer.hs
6_term/translation/depressed/tmp/: .gitignore  Pascal.y  run.sh
6_term/translation/tex2html/: tex2html.cabal
6_term/translation/tex2html/app/: Main.hs
6_term/translation/tex2html/src/: HtmlPrinter.hs  Parser.y  Types.hs
6_term/translation/tex2html/utils/: end.html  run.sh  sample.tex  start.html
7_term/: .gitignore
7_term/sd/: .gitignore  build.gradle  settings.gradle
8_term/op/: hw1.ipynb  hw2.ipynb  hw3.nb
8_term/sd/: .gitignore
(+552 files in other folders)
