name:                distr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/artemohanjanyan/university/tree/master/6_term/distr
license:             BSD3
license-file:        LICENSE
author:              Artem Ohanjanyan
maintainer:          artemohanjanyan@gmail.com
copyright:           Copyright: (c) 2017 Artem Ohanjanyan
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , network
                     , mtl
                     , transformers
                     , megaparsec
                     , bytestring
                     , binary
                     --, either
  default-language:    Haskell2010

executable distr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , distr
  default-language:    Haskell2010

test-suite distr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , distr
                     , network
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/artemohanjanyan/university
