name:                tex2html
version:             0.1.0.0
-- synopsis:
-- description:
author:              Artem Ohanjanyan
maintainer:          artemohanjanyan@gmail.com
copyright:           Copyright: (c) 2017 Artem Ohanjanyan
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Parser
                     , HtmlPrinter
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010

executable tex2html
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tex2html
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/artemohanjanyan/university
  subdir:   6_term/translation/tex2html
